# wirth

./: .gitignore  Cargo.toml  LOG.md  Makefile  README.md  TODO.md  errors.md  errors.org  lcov.info  log.md  rust-toolchain.toml  todo.md
assembler/: Cargo.toml
assembler/src/: assembler_test.rs  lib.rs
bin-assembler/: Cargo.toml
bin-assembler/src/: main.rs
bin-compiler/: Cargo.toml  foo.mod
bin-compiler/src/: main.rs
bin-graph/: Cargo.toml  arithmetic.mod  bad.mod  logical.mod
bin-graph/src/: lib.rs  main.rs
bin-simulator/: Cargo.toml
bin-simulator-gui/: Cargo.toml
bin-simulator-gui/src/: lib.rs  main.rs
bin-simulator/src/: main.rs
book/: 00_cover.md  02_scanner.md
cli/: Cargo.toml  example.Mod
cli-compiler/: Cargo.toml
cli-compiler/src/: main.rs
cli-risc/: Cargo.toml
cli-risc/src/: examples_tests.rs  main.rs
cli/src/: main.rs
codegen/: Cargo.toml
codegen/src/: lib.rs
compiler/: Cargo.toml  TODO.md  book.sh
compiler/book/: 01_intro.md  02_scanner.md
compiler/src/: ast.rs  lib.rs  line_scanner.rs  parser.rs  parser_test.rs  scanner.rs  scanner2.rs  scope.rs  token.rs  tree_parser.rs
compiler/src.bak/: scanner.rs  scanner3.rs  scanner4.rs
dom-ast/: Cargo.toml
dom-ast/src/: ast.rs  ast_tests.rs  lib.rs  line_scanner.rs  line_scanner_tests.rs  parser.rs  parser_tests.rs  scanner.rs  scanner_tests.rs  scope.rs  token.rs  tree.rs
dom-ast/src/parser_tests/: logical.rs  looping.rs  misc.rs  mod.rs  module.rs  types.rs
dom-risc/: Cargo.toml
dom-risc/src/: computer.rs  computer_test.rs  instructions.rs  lib.rs
dom-web/: Cargo.toml
gui/: Cargo.toml
gui-raylib/: Cargo.toml
gui-raylib/src/: main.rs
gui-risc/: Cargo.toml
gui-risc/src/: main.rs
gui/src/: main.rs
plan/: backlog.md  done.md  log.md  todo.md
risc/: Cargo.toml
risc/src/: computer.rs  computer_test.rs  instructions.rs  lib.rs
src/: lib.rs  main.rs  parser.rs  scanner.rs
uc-assembler/: Cargo.toml
uc-assembler/src/: assembler.rs  assembler_test.rs  lib.rs
uc-assembler/tests/: assembler_integration.rs
uc-compiler/: Cargo.toml  Makefile
uc-compiler/src/: codegen.rs  lib.rs
uc-compiler/tests/: compiler_integration_tests.rs  compiler_logic_tests.rs  integration_tests.rs
uc-parser/: Cargo.toml
uc-simulator/: Cargo.toml  example.mod
uc-simulator/src/: lib.rs
uc-simulator/tests/: integration_tests.rs  oberon_arrays_test.rs  oberon_assignment_tests.rs  oberon_logical_tests.rs  oberon_looping_test.rs  simulate_assembled_code_tests.rs  simulator_integration_tests.rs  squares_test.rs
