[package]
name = "bin-simulator-gui"
version = "0.1.0"
authors = ["Pierre-Henri Trivier <pierre-henri.trivier@easymile.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simulator-gui"
path = "src/main.rs"

[dependencies]
relm4 = "0.5.0"
relm4-components = "0.5.0"
structopt = "0.3"
simulator = { path = "../uc-simulator"}
risc = { path = "../dom-risc"}
