[package]
name = "cli-risc"
version = "0.1.0"
authors = ["Pierre-Henri Trivier <pierre-henri.trivier@easymile.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler = { path = "../compiler" }
risc = { path = "../risc" }
assembler = { path = "../assembler" }
clap = "3.0.0-beta.1"
