[package]
name = "cli-risc"
version = "0.1.0"
authors = ["Pierre-Henri Trivier <pierre-henri.trivier@easymile.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.125"
bincode = "1.3.3"
structopt = "0.3"
compiler = { path = "../compiler" }
risc = { path = "../risc" }
assembler = { path = "../assembler" }