[package]
name = "gui"
version = "0.1.0"
authors = ["Pierre-Henri Trivier <pierre-henri.trivier@easymile.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc = { path = "../risc"}
raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
