[package]
name = "compiler"
version = "0.1.0"
authors = ["Pierre-Henri Trivier <phtrivier@yahoo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../dom-ast"}
risc = { path = "../dom-risc"}

[dev-dependencies]
pretty_assertions = "1.3.0"
